Many changes in main component
*Added delete and edit and create setlist buttons
*Added delete and add song buttons
*Added an account page
*Added email regex at login and registration pages
*A few local changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -86,3 +86,8 @@ code {
   background-size: contain;
   background-position: 4px;
 }
+.song-icon{
+  background-image: url("assets/images/song.svg");
+  background-size: auto;
+  background-position: 4px;
+}
