Added an account page
* Many changes in css elements
* Tested dragable feature
* Added account page with features (changing artist name, email, country, organization, password, adding members to your artist, deleting your account)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,3 +91,13 @@ code {
   background-size: auto;
   background-position: 4px;
 }
+.city-icon{
+  background-image: url("assets/images/city.svg");
+  background-size: auto;
+  background-position: 4px;
+}
+.organization-icon{
+  background-image: url("assets/images/organization.svg");
+  background-size: auto;
+  background-position: 4px;
+}
