--- a/backend/templates/setlist.html
+++ b/backend/templates/setlist.html
@@ -5,14 +5,59 @@
     <title>Setlist</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=PT+Mono&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+    <style>
+        /*@page {*/
+        /*    size: 21cm 29.7cm;*/
+        /*}*/
+        @media print {
+            body{
+                width: 21cm;
+                height: 29.7cm;
+                /*margin: 30mm 45mm 30mm 45mm;*/
+        /* change the margins as you want them to be. */
+            }
+}
+        b {
+            font-family: "Caveat";
+            /*font-weight: bold;*/
+        }
+        .artist {
+            font-size: xxx-large;
+        }
+        .info {
+            font-size: large;
+            padding-top: 2px;
+        }
+        .list {
+            font-size: xx-large;
+            display: grid;
+            /*grid-template-columns: 1fr 1fr;*/
+            /*grid-auto-columns: auto;*/
+            /*flex-direction: column;*/
+        }
+        .list-item {
+            padding: 5px;
+        }
+        .document {
+            /*height: 3508px;*/
+            /*width: 2480px;*/
+        }
+    </style>
 </head>
 <body>
-    <h2>{{setlist.artist}}</h2>
-    <h4>{{setlist.venue}}, {{setlist.city}}, {{setlist.date}}, {{setlist.comment}}</h4>
-    {% for i in setlist.songs %}
-    <h3>{{loop.index}}. {{i}}</h3>
-    {% endfor %}
+    <div class="document">
+        <div class="artist">
+            <b>{{setlist.artist}}</b>
+        </div>
+        <div class="info">
+            <b>{{setlist.venue}}, {{setlist.city}}, {{setlist.date}}, {{setlist.comment}}</b>
+        </div>
+        <div class="list">
+            {% for i in setlist.songs %}
+            <b class="list-item">{{loop.index}}. {{i}}</b>
+            {% endfor %}
+        </div>
+    </div>
 </body>
 </html>
