--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -65,8 +64,8 @@ code {
 .text-gradient{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 .message-icon{
